samples/_failures_safe/1761305405_898f09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd582c4b.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_fd582c4b.c:160:36: error: expected ‘;’ at end of input
  160 |         case TOKEN_OPERATOR: printf
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_fd582c4b.c:160:9: error: expected declaration or statement at end of input
  160 |         case TOKEN_OPERATOR: printf
      |         ^~~~
./samples/SAFE/__tmp_fd582c4b.c:160:9: error: expected declaration or statement at end of input
